# router

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  main.py  plugins.yaml  pyproject.toml  test_lmstudio.py
.claude/: launch.json  settings.local.json
src/adapters/: _template.py  base.py  gemini_ext.py  lmstudio_ext.py  ollama_ext.py  openai_ext.py
src/core/: models.py  orchestrator.py  pipeline.py  registry.py  state.py
src/gateway/: main.py  server.py
src/middleware/: _template.py  base.py  dlp_guard.py  early_exit.py  fallback.py  logger.py  rag_injector.py  router.py
src/utils/: config.py  errors.py  logging.py
tests/test_adapters/: test_connection_pooling.py  test_error_classification.py  test_gemini_adapter.py  test_ollama_adapter.py  test_openai_adapter.py
tests/test_gateway/: test_error_handling.py  test_middleware.py
tests/test_middleware/: test_dlp_guard.py  test_early_exit.py  test_early_exit_security.py  test_fallback.py  test_logger.py  test_router.py
tests/test_pipeline/: test_fallback_integration.py  test_integration.py  test_orchestrator.py  test_pipeline.py  test_registry.py  test_streaming.py
tests/test_utils/: test_config.py  test_logging.py
