[project]
name = "ai-gateway-brain"
version = "0.1.0"
description = "Central nervous system for all your AI interactions — a local proxy with RAG, routing, and middleware"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.5",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.43.0",
]

[project.scripts]
ai-gateway = "src.gateway.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
