[project]
name = "ai-router"
version = "0.2.0"
description = "Modular AI routing engine — pluggable adapters, middleware, and pipeline architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "uvicorn>=0.43.0",
]

[project.scripts]
ai-router = "src.gateway.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "openai>=2.30.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
